--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -32,7 +32,7 @@ File: app.css
 /* Google Font*/
 
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 
 /* General */
@@ -53,7 +53,7 @@ body {
 	background-color: #f4f4f4;
 
 
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Inter', sans-serif;
 
 
 }
@@ -3907,23 +3907,12 @@ a {
 
 
 .bg-login {
-
-
-	background-image: url(../images/login-images/bg-login-img.jpg);
-
-
+	background-image: inherit !important;
 	background-size: cover;
-
-
 	background-position: center;
-
-
 	background-repeat: no-repeat;
-
-
 	background-attachment: fixed;
-
-
+	background-color: #fafafa !important;
 }
 
 
