--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -164,12 +164,8 @@ a {
 }
 
 
-.logo-icon {
-
-
-	width: 40px;
-
-
+.sidebar-header .logo-icon {
+	width: 80%;
 }
 
 
@@ -195,17 +191,13 @@ a {
 
 
 .toggle-icon {
-
-
 	font-size: 22px;
-
-
 	cursor: pointer;
-
-
-	color: #0d6efd;
-
-
+	color: #000;
+	margin: 6px 0 0 0;
+}
+.simplebar-content .logo-text {
+	display: none;
 }
 
 
@@ -394,7 +386,7 @@ a {
 	display: flex;
 
 
-	padding: 10px;
+	padding: 0px;
 
 
 	margin-top: 60px;
@@ -478,47 +470,21 @@ a {
 
 
 .sidebar-wrapper .metismenu a {
-
-
 	position: relative;
-
-
 	display: flex;
-
-
 	align-items: center;
-
-
 	justify-content: left;
-
-
-	padding: 8px 15px;
-
-
-	font-size: 15px;
-
-
-	color: #5f5f5f;
-
-
+	padding: 13px 15px;
+	font-size: 14px;
+	color: #333;
 	outline-width: 0;
-
-
 	text-overflow: ellipsis;
-
-
 	overflow: hidden;
-
-
-	letter-spacing: .5px;
-
-
-	border: 1px solid #ffffff00;
-
-
+	letter-spacing: 0.5px;
+	border-bottom: 1px solid #f7f7f7;
 	transition: all .3s ease-out;
-
-
+	font-weight: 400;
+	margin: -5px 0 0 0;
 }
 
 
@@ -597,27 +563,10 @@ a {
 }
 
 
-.sidebar-wrapper .metismenu a:hover,
-
-
-.sidebar-wrapper .metismenu a:focus,
-
-
-.sidebar-wrapper .metismenu a:active,
-
-
-.sidebar-wrapper .metismenu .mm-active>a {
-
-
-	color: #0d6efd;
-
-
+.sidebar-wrapper .metismenu a:hover, .sidebar-wrapper .metismenu a:focus, .sidebar-wrapper .metismenu a:active, .sidebar-wrapper .metismenu .mm-active > a {
+	color: #ff725e;
 	text-decoration: none;
-
-
-	background: rgb(13 110 253 / 0.12)
-
-
+	background: #f7f7f7;
 }
 
 
